[package]
name = "reactfs"
version = "0.1.0"
authors = ["Paul Grandperrin <paul.grandperrin@gmail.com>"]
publish = false

[features]
instrumentation = []
default = ["instrumentation"]

[dependencies]
futures-await = {git = "https://github.com/PaulGrandperrin/futures-await.git"}
futures = "0.1"
slab = "0.4"
byteorder = "1"
failure = "0.1"
itertools = {version = "0.7", default-features = false}
num-traits = "0.1"
enum-primitive-derive = "0.1"
bytes = "0.4"
honggfuzz = "0.5"
fuzztest = "0.1"

[dev-dependencies]
quickcheck = { version = "0.6", features = ["unstable"]}
quickcheck_macros = "0.6"
proptest = "0.4"

[[bin]]
name = "reactfs"
required-features = ["instrumentation"]

[[bin]]
name = "hfuzz-btree"
path = "hfuzz/btree.rs"
required-features = ["instrumentation"]